Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-2780

Changing the vertical alignment of the layoutLabelAlignment of a form layout does not work.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 5.13.0 Alpha 1
    • 4.7.0, 5.1.1
    • Widgets: Layout
    • None
    • 0b736d91b779c9f475ccb6a21339d0aa1cada2e4

    Description

      Changing the vertical alignment of the layoutLabelAlignment of a form layout does not work, while changing the horizontal does work. The vertical alignment should probably not be visible in designer, or QFormLayout could respect the vertical value.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            chehrlic Christian Ehrlicher
            smd Jan Arve
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes