src/widgets/kernel/qformlayout.cpp
@@ -2209,8 +2209,11 @@ void QFormLayoutPrivate::arrangeWidgets(const QVector<QLayoutStruct>& layouts, Q
 
             QSize sz(qMin(label->layoutWidth, label->sizeHint.width()), height);
             int x = leftOffset + rect.x() + label->layoutPos;
-            if (fixedAlignment(q->labelAlignment(), layoutDirection) & Qt::AlignRight)
+            const auto fAlign = fixedAlignment(q->labelAlignment(), layoutDirection);
+            if (fAlign & Qt::AlignRight)
                 x += label->layoutWidth - sz.width();
+            else if (fAlign & Qt::AlignHCenter)
+                x += label->layoutWidth / 2 - sz.width() / 2;
             QPoint p(x, layouts.at(label->vLayoutIndex).pos);
             // ### expansion & sizepolicy stuff
 
